[gd_scene format=4 uid="uid://bnha4aj7cucjs"]

[ext_resource type="Script" uid="uid://b4h2dn1qvah5b" path="res://Scripts/Room/Room.gd" id="1_5hpqs"]
[ext_resource type="Texture2D" uid="uid://dg7thev7o73pn" path="res://Sprites/Tiles/Forest/tileset_floor.png" id="2_nn86p"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uj218"]
texture = ExtResource("2_nn86p")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_5hpqs"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_uj218")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5hpqs"]
load_path = "res://.godot/imported/tileset_walls.png-185730d2c9bfe25342239939ac357a01.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nn86p"]
texture = SubResource("CompressedTexture2D_5hpqs")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_uj218"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_nn86p")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nn86p"]
distance = -270.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uj218"]
normal = Vector2(0, 1)
distance = -291.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a2si3"]
normal = Vector2(1, 0)
distance = -363.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_aaq88"]
normal = Vector2(-0.99999624, -0.0027247854)
distance = -395.99036

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2si3"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aaq88"]
size = Vector2(32, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gm67"]
size = Vector2(31, 31.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xebr5"]
size = Vector2(33, 32)

[node name="Node2D" type="Node2D" unique_id=501371278]
script = ExtResource("1_5hpqs")
metadata/_custom_type_script = "uid://b4h2dn1qvah5b"

[node name="Floor" type="TileMapLayer" parent="." unique_id=148722313]
tile_map_data = PackedByteArray("AAD0/wgAAQABAAEAAAD1/wgAAQABAAEAAAD2/wgAAQAAAAEAAAD3/wgAAQABAAEAAAD4/wgAAQABAAEAAAD5/wgAAQAAAAAAAAD6/wgAAQAAAAEAAAD7/wgAAQABAAEAAAD8/wgAAQABAAEAAAD9/wgAAQABAAEAAAD+/wgAAQABAAEAAAD//wgAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAAKAAcAAQABAAEAAAALAAcAAQABAAEAAAALAAgAAQABAAEAAAAJAAcAAQABAAEAAAAIAAcAAQABAAEAAAAHAAcAAQAAAAEAAAAGAAcAAQABAAEAAAAFAAcAAQABAAEAAAAEAAcAAQABAAEAAAADAAYAAQABAAAAAAACAAYAAQABAAAAAAABAAYAAQABAAAAAAAAAAYAAQABAAEAAAD//wYAAQABAAAAAAD+/wYAAQABAAEAAAD9/wYAAQAAAAEAAAD8/wYAAQAAAAEAAAD7/wYAAQAAAAEAAAD6/wYAAQAAAAAAAAD5/wYAAQAAAAEAAAD4/wUAAQAAAAEAAAD3/wUAAQABAAAAAAD3/wYAAQAAAAEAAAD2/wYAAQABAAAAAAD1/wYAAQABAAAAAAD1/wcAAQABAAEAAAD0/wcAAQABAAEAAAD2/wcAAQABAAAAAAD3/wcAAQAAAAEAAAD4/wcAAQAAAAAAAAD5/wcAAQABAAAAAAD6/wcAAQAAAAAAAAD7/wcAAQAAAAEAAAD8/wcAAQAAAAEAAAD9/wcAAQABAAEAAAD+/wcAAQABAAEAAAD//wcAAQABAAEAAAAAAAcAAQABAAAAAAABAAcAAQABAAAAAAACAAcAAQABAAEAAAADAAcAAQAAAAAAAAAGAAYAAQAAAAEAAAAFAAYAAQAAAAEAAAAEAAYAAQABAAEAAAABAAUAAQAAAAEAAAAAAAUAAQAAAAEAAAD//wQAAQAAAAEAAAD+/wQAAQAAAAEAAAD+/wMAAQAAAAEAAAD+/wIAAQABAAEAAAD+/wEAAQAAAAEAAAD//wEAAQABAAAAAAD//wAAAQABAAEAAAD+/wAAAQAAAAAAAAD9/wEAAQAAAAEAAAD8/wIAAQAAAAEAAAD8/wMAAQAAAAEAAAD8/wQAAQABAAAAAAD9/wQAAQABAAAAAAD//wMAAQABAAEAAAD//wIAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAEAAQAAAAAAAAD9/wIAAQABAAAAAAD8/wUAAQAAAAEAAAD9/wUAAQAAAAEAAAD+/wUAAQABAAAAAAD//wUAAQABAAAAAAABAAQAAQABAAAAAAACAAMAAQABAAAAAAACAAIAAQAAAAAAAAABAAIAAQABAAAAAAAAAAMAAQABAAEAAAD9/wMAAQAAAAEAAAD7/wQAAQABAAAAAAABAAMAAQABAAAAAAAAAAQAAQABAAAAAAD6/wUAAQABAAAAAAD5/wUAAQAAAAEAAAD4/wYAAQAAAAEAAAD4/wQAAQAAAAEAAAD5/wMAAQABAAAAAAD6/wMAAQABAAAAAAD7/wIAAQABAAEAAAD7/wMAAQAAAAEAAAD6/wQAAQABAAAAAAD7/wUAAQABAAAAAAD8/wEAAQAAAAEAAAD6/wIAAQABAAAAAAD4/wMAAQAAAAEAAAD3/wQAAQABAAAAAAD2/wUAAQABAAAAAAD2/wQAAQABAAAAAAD3/wMAAQAAAAEAAAD4/wIAAQABAAAAAAD5/wEAAQAAAAEAAAD6/wEAAQAAAAEAAAD7/wAAAQABAAAAAAD8////AQABAAAAAAD7/wEAAQABAAAAAAD5/wQAAQABAAAAAAD5/wIAAQABAAAAAAD6/wAAAQAAAAEAAAD6////AQABAAAAAAD4/wEAAQAAAAEAAAD3/wIAAQABAAAAAAD2/wMAAQABAAAAAAD3/wEAAQAAAAEAAAD4/wAAAQABAAAAAAD3/wAAAQAAAAEAAAD2/wIAAQABAAAAAAD1/wQAAQABAAAAAAD0/wUAAQABAAEAAAD0/wQAAQABAAEAAAD0/wMAAQABAAEAAAD0/wIAAQABAAEAAAD0/wYAAQABAAEAAAD1/wMAAQABAAAAAAD1/wIAAQABAAAAAAD0//f/AQABAAEAAAD0//j/AQABAAEAAAD0//n/AQABAAEAAAD0//r/AQABAAAAAAD0//v/AQABAAAAAAD0//z/AQABAAEAAAD0//3/AQABAAEAAAD0//7/AQABAAEAAAD0////AQABAAEAAAD0/wAAAQABAAEAAAD0/wEAAQABAAEAAAD1/wEAAQABAAEAAAD2/wEAAQABAAEAAAD2/wAAAQABAAEAAAD5/wAAAQABAAAAAAD8/wAAAQABAAEAAAD9/wAAAQABAAEAAAAAAAAAAQABAAAAAAABAAAAAQABAAAAAAACAAAAAQAAAAEAAAACAAEAAQABAAAAAAADAAIAAQABAAAAAAADAAMAAQABAAAAAAADAAQAAQABAAAAAAACAAQAAQAAAAEAAAACAAUAAQABAAAAAAADAAUAAQABAAAAAAAHAAYAAQAAAAEAAAAIAAYAAQAAAAAAAAAJAAYAAQABAAEAAAAKAAYAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAAAAAALAAMAAQABAAEAAAAKAAIAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAAAAQABAAEAAAAKAP//AQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAALAP//AQABAAEAAAALAP7/AQABAAEAAAALAP3/AQABAAEAAAALAPz/AQABAAEAAAALAPv/AQABAAEAAAALAPr/AQABAAEAAAALAPn/AQABAAEAAAALAPj/AQABAAEAAAALAPf/AQABAAEAAAAKAPf/AQABAAEAAAAJAPf/AQABAAEAAAAIAPf/AQABAAEAAAAHAPf/AQABAAEAAAAGAPf/AQABAAEAAAAFAPf/AQABAAAAAAAEAPf/AQABAAAAAAADAPf/AQABAAAAAAACAPf/AQAAAAAAAAABAPf/AQAAAAAAAAAAAPf/AQABAAEAAAD///f/AQABAAEAAAD+//f/AQABAAEAAAD9//f/AQABAAEAAAD8//f/AQABAAEAAAD7//f/AQABAAEAAAD6//f/AQABAAEAAAD5//f/AQABAAEAAAD4//f/AQABAAEAAAD3//f/AQABAAEAAAD2//f/AQABAAEAAAD1//f/AQABAAEAAAD1//j/AQABAAEAAAD1//n/AQABAAAAAAD2//n/AQABAAAAAAD3//n/AQABAAAAAAD3//j/AQABAAEAAAD4//j/AQAAAAAAAAD5//j/AQABAAEAAAD6//j/AQABAAEAAAD7//j/AQABAAEAAAD8//j/AQABAAEAAAD9//j/AQABAAEAAAD+//j/AQABAAEAAAD///j/AQABAAEAAAAAAPj/AQAAAAAAAAABAPj/AQABAAEAAAACAPj/AQABAAEAAAADAPj/AQABAAAAAAAEAPj/AQABAAAAAAAFAPj/AQABAAAAAAAGAPj/AQABAAEAAAAHAPj/AQABAAEAAAAIAPj/AQABAAEAAAAJAPj/AQABAAEAAAAKAPj/AQABAAEAAAAKAPn/AQABAAEAAAAKAPr/AQABAAEAAAAKAPv/AQABAAEAAAAKAPz/AQABAAEAAAAKAP3/AQABAAEAAAAKAP7/AQABAAEAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQAAAAEAAAAIAAMAAQAAAAEAAAAIAAQAAQAAAAEAAAAJAAQAAQABAAAAAAAJAAUAAQAAAAEAAAAKAAUAAQABAAAAAAAKAAMAAQABAAAAAAAKAAQAAQABAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAMAAQABAAAAAAAHAAQAAQAAAAEAAAAGAAUAAQAAAAEAAAAGAAQAAQABAAAAAAAHAAMAAQABAAAAAAAHAAIAAQABAAAAAAAHAAUAAQAAAAEAAAAIAAUAAQAAAAEAAAAFAAUAAQABAAAAAAAEAAUAAQABAAAAAAAFAAQAAQABAAAAAAAFAAMAAQAAAAEAAAAGAAMAAQAAAAEAAAAGAAIAAQABAAEAAAAEAAQAAQABAAAAAAAGAAEAAQABAAAAAAAHAAEAAQAAAAEAAAAFAAIAAQABAAAAAAAEAAMAAQABAAEAAAAEAAIAAQABAAAAAAAFAAEAAQABAAAAAAAHAAAAAQAAAAEAAAAHAP//AQAAAAEAAAAGAAAAAQAAAAEAAAAFAAAAAQABAAAAAAAEAAEAAQABAAAAAAADAAAAAQAAAAEAAAAEAAAAAQABAAEAAAADAAEAAQABAAAAAAABAAEAAQAAAAEAAAADAP//AQAAAAEAAAACAP//AQAAAAEAAAACAP7/AQABAAAAAAD/////AQAAAAEAAAAAAP7/AQAAAAEAAAABAP7/AQAAAAEAAAD+////AQAAAAEAAAD9////AQAAAAEAAAD+//7/AQAAAAEAAAD///3/AQAAAAEAAAD9//7/AQAAAAEAAAD7////AQAAAAEAAAD///7/AQAAAAEAAAADAP7/AQABAAAAAAAAAP//AQAAAAAAAAABAP//AQAAAAAAAAD8//7/AQABAAAAAAD8//3/AQABAAAAAAD9//3/AQAAAAEAAAD+//3/AQABAAAAAAAAAP3/AQAAAAEAAAABAP3/AQAAAAEAAAACAP3/AQAAAAEAAAADAP3/AQAAAAEAAAAEAP7/AQABAAAAAAD7//7/AQABAAAAAAD7//3/AQABAAAAAAD+//z/AQAAAAEAAAD///z/AQAAAAEAAAAAAPz/AQABAAEAAAABAPz/AQAAAAEAAAACAPz/AQAAAAEAAAADAPz/AQABAAAAAAD9//z/AQABAAAAAAD8//z/AQABAAAAAAD7//z/AQABAAAAAAD8//v/AQABAAAAAAD9//v/AQABAAAAAAD+//v/AQAAAAEAAAD///v/AQAAAAEAAAAAAPv/AQABAAAAAAABAPv/AQABAAAAAAACAPv/AQABAAEAAAADAPv/AQABAAAAAAD6//z/AQABAAAAAAD5//v/AQAAAAEAAAD6//r/AQAAAAEAAAD7//r/AQAAAAEAAAD8//r/AQAAAAEAAAD9//r/AQAAAAEAAAD+//r/AQAAAAEAAAD///r/AQAAAAEAAAAAAPr/AQAAAAAAAAABAPr/AQABAAAAAAACAPr/AQAAAAAAAAAEAPv/AQABAAAAAAD5//r/AQAAAAEAAAD7//n/AQAAAAEAAAD8//n/AQAAAAEAAAD9//n/AQABAAAAAAD+//n/AQABAAAAAAD4//r/AQABAAAAAAD4//n/AQABAAAAAAD2//j/AQABAAEAAAD6//n/AQAAAAAAAAD5//n/AQAAAAEAAAD2//r/AQABAAEAAAD1//r/AQABAAAAAAD1//v/AQABAAAAAAD1//z/AQAAAAAAAAD1//3/AQABAAEAAAD1/wAAAQABAAEAAAD1/wUAAQABAAAAAAD2////AQABAAEAAAD2//7/AQAAAAEAAAD1//7/AQABAAEAAAD1////AQABAAEAAAD3////AQAAAAEAAAD4////AQABAAAAAAD5////AQABAAEAAAD6//7/AQABAAAAAAD5//7/AQABAAAAAAD4//7/AQABAAAAAAD3//7/AQAAAAEAAAD5//3/AQABAAAAAAD6//3/AQAAAAEAAAD7//v/AQABAAAAAAD6//v/AQABAAAAAAD4//z/AQABAAAAAAD3//z/AQAAAAEAAAD4//v/AQAAAAEAAAD5//z/AQABAAAAAAD3//3/AQAAAAEAAAD2//3/AQAAAAEAAAD4//3/AQABAAAAAAD3//r/AQABAAAAAAD2//v/AQAAAAEAAAD2//z/AQAAAAEAAAD3//v/AQABAAAAAAAEAPz/AQAAAAEAAAAFAPz/AQAAAAEAAAAFAP3/AQABAAEAAAAFAP7/AQABAAAAAAAEAP//AQABAAEAAAAFAP//AQABAAAAAAAGAP//AQAAAAAAAAAIAP//AQAAAAEAAAAIAP7/AQABAAEAAAAIAP3/AQABAAAAAAAJAP7/AQAAAAEAAAAJAP3/AQAAAAEAAAAJAPz/AQAAAAEAAAAJAPv/AQABAAAAAAAJAPr/AQABAAEAAAAJAPn/AQABAAEAAAAIAPn/AQABAAEAAAAHAPn/AQABAAEAAAAGAPn/AQABAAAAAAAFAPn/AQABAAAAAAAEAPn/AQABAAAAAAADAPn/AQABAAEAAAACAPn/AQABAAEAAAABAPn/AQABAAEAAAAAAPn/AQABAAEAAAD///n/AQAAAAAAAAADAPr/AQAAAAAAAAAEAPr/AQABAAEAAAAFAPr/AQABAAAAAAAGAPr/AQABAAAAAAAHAPr/AQAAAAEAAAAIAPr/AQAAAAEAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAEAAAAHAPz/AQAAAAEAAAAGAPz/AQAAAAEAAAAFAPv/AQABAAAAAAAGAPv/AQABAAEAAAAHAPv/AQAAAAEAAAAHAP3/AQAAAAEAAAAGAP3/AQABAAAAAAAGAP7/AQABAAAAAAAHAP7/AQAAAAEAAAAEAP3/AQAAAAAAAAAMAAgAAQAAAAEAAAAMAAcAAQAAAAAAAAAMAAYAAQAAAAEAAAAMAAUAAQABAAEAAAAMAAQAAQAAAAAAAAAMAAMAAQAAAAEAAAAMAAIAAQAAAAEAAAAMAAEAAQABAAAAAAAMAAAAAQAAAAAAAAAMAP//AQAAAAAAAAAMAP7/AQAAAAEAAAAMAP3/AQABAAEAAAAMAPz/AQAAAAAAAAAMAPv/AQAAAAEAAAAMAPr/AQAAAAEAAAAMAPn/AQABAAAAAAAMAPj/AQAAAAAAAAAMAPf/AQAAAAEAAAAMAPb/AQABAAAAAAALAPb/AQABAAAAAAAKAPb/AQAAAAEAAAAJAPb/AQABAAEAAAAIAPb/AQAAAAAAAAAHAPb/AQABAAEAAAAGAPb/AQAAAAEAAAAFAPb/AQABAAEAAAAEAPb/AQABAAEAAAADAPb/AQAAAAAAAAACAPb/AQAAAAEAAAABAPb/AQAAAAAAAAAAAPb/AQABAAAAAAD///b/AQAAAAAAAAD+//b/AQAAAAAAAAD9//b/AQABAAEAAAD8//b/AQABAAAAAAD7//b/AQAAAAEAAAD6//b/AQABAAEAAAD5//b/AQABAAEAAAD4//b/AQAAAAAAAAD3//b/AQAAAAAAAAD1//b/AQABAAEAAAD0//b/AQABAAAAAAD2//b/AQAAAAEAAAA=")
tile_set = SubResource("TileSet_5hpqs")
collision_enabled = false

[node name="Walls" type="TileMapLayer" parent="." unique_id=526414697]
tile_map_data = PackedByteArray("AAAKAAgAAAAAAAEAAAAJAAgAAAAAAAEAAAAIAAgAAAAAAAEAAAAHAAgAAAAAAAEAAAAGAAgAAAAAAAEAAAAFAAgAAAAAAAEAAAAEAAgAAAAAAAEAAAADAAgAAAAAAAEAAAACAAgAAAAAAAEAAAABAAgAAAAAAAEAAAD+/wgAAAAAAAEAAAD9/wgAAAAAAAEAAAD8/wgAAAAAAAEAAAD7/wgAAAAAAAEAAAD6/wgAAAAAAAEAAAD5/wgAAAAAAAEAAAD4/wgAAAAAAAEAAAD3/wgAAAAAAAEAAAD2/wgAAAAAAAEAAAD1/wgAAAAAAAEAAAD0/wgAAAABAAEAABD0/wcAAAABAAAAABD0/wYAAAABAAAAABD0/wUAAAABAAAAABD0/wQAAAABAAAAABD0/wMAAAABAAAAABD0/wIAAAABAAAAABD0/wEAAAABAAAAABD0//7/AAABAAAAABD0//3/AAABAAAAABD0//z/AAABAAAAABD0//v/AAABAAAAABD0//r/AAABAAAAABD0//n/AAABAAAAABD0//j/AAABAAAAABD1//b/AAAAAAAAAAD2//b/AAAAAAAAAAD3//b/AAAAAAAAAAD4//b/AAAAAAAAAAD5//b/AAAAAAAAAAD6//b/AAAAAAAAAAD7//b/AAAAAAAAAAD8//b/AAAAAAAAAAD9//b/AAAAAAAAAAD+//b/AAAAAAAAAAD///b/AAAAAAAAAAABAPb/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPb/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAAIAPb/AAAAAAAAAAAJAPb/AAAAAAAAAAAKAPb/AAAAAAAAAAALAPb/AAAAAAAAAAAMAPb/AAABAAEAAGD0//b/AAABAAEAAHAMAPf/AAABAAAAAAAMAPj/AAABAAAAAAAMAPn/AAABAAAAAAAMAPr/AAABAAAAAAAMAPv/AAABAAAAAAAMAPz/AAABAAAAAAAMAP3/AAABAAAAAAAMAP7/AAABAAAAAAAMAAAAAAABAAAAAAAMAAEAAAABAAAAAAAMAAIAAAABAAAAAAAMAAMAAAABAAAAAAAMAAQAAAABAAAAAAAMAAUAAAABAAAAAAAMAAYAAAABAAAAAAAMAAcAAAABAAAAAAD0//f/AAABAAAAABALAAgAAAAAAAEAAAAMAAgAAAABAAEAAAD0/wAAAAABAAAAABD//wgAAAAAAAEAAAAAAPb/AAAAAAAAAAAMAP//AAABAAAAAAD0////AAABAAAAABAAAAgAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_uj218")

[node name="Boundaries" type="StaticBody2D" parent="." unique_id=778657740]

[node name="Bottom" type="CollisionShape2D" parent="Boundaries" unique_id=1702598867]
shape = SubResource("WorldBoundaryShape2D_nn86p")

[node name="Top" type="CollisionShape2D" parent="Boundaries" unique_id=402415720]
shape = SubResource("WorldBoundaryShape2D_uj218")

[node name="Left" type="CollisionShape2D" parent="Boundaries" unique_id=1691826638]
shape = SubResource("WorldBoundaryShape2D_a2si3")

[node name="Right" type="CollisionShape2D" parent="Boundaries" unique_id=911212988]
shape = SubResource("WorldBoundaryShape2D_aaq88")

[node name="Doors" type="Node2D" parent="." unique_id=898270556]
position = Vector2(1, -28)

[node name="DoorsNorth" type="Area2D" parent="Doors" unique_id=1693997976]
z_index = 1
position = Vector2(15, -272)

[node name="Dorway" type="CollisionShape2D" parent="Doors/DoorsNorth" unique_id=718095591]
shape = SubResource("RectangleShape2D_a2si3")

[node name="DoorsSouth" type="Area2D" parent="Doors" unique_id=630011747]
z_index = 1
position = Vector2(15, 309)

[node name="Dorway" type="CollisionShape2D" parent="Doors/DoorsSouth" unique_id=299373824]
shape = SubResource("RectangleShape2D_aaq88")

[node name="DoorsEast" type="Area2D" parent="Doors" unique_id=1804397512]
z_index = 1
position = Vector2(403, 12)

[node name="Dorway" type="CollisionShape2D" parent="Doors/DoorsEast" unique_id=874492644]
shape = SubResource("RectangleShape2D_7gm67")

[node name="DoorsWest" type="Area2D" parent="Doors" unique_id=1095212010]
z_index = 1
position = Vector2(-374, 13)

[node name="Dorway" type="CollisionShape2D" parent="Doors/DoorsWest" unique_id=501886308]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_xebr5")

[node name="SpawnPoints" type="Node2D" parent="." unique_id=1329450480]

[node name="PlayerSpawn" type="Marker2D" parent="SpawnPoints" unique_id=560460505]

[node name="Obstacles" type="Node2D" parent="." unique_id=1060367826]

[node name="Enemies" type="Node2D" parent="." unique_id=1365813568]

[node name="Camera2D" type="Camera2D" parent="." unique_id=1818026901]
position = Vector2(17, -12)
